# solarsystem

./: CMakeLists.txt  camera.cpp  main.cpp  tga.cpp  tga.h
